--- a/app/src/main/res/layout/transfer_success_activity.xml
+++ b/app/src/main/res/layout/transfer_success_activity.xml
@@ -148,6 +148,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/label_content" />
 
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_continue_transaction"
                 style="@style/Style.App.Button.Success"
@@ -157,9 +158,10 @@
                 android:textColor="@color/aspire_dark_text"
                 android:textAllCaps="false"
                 android:textSize="13sp"
-                android:paddingHorizontal="2dp"
+                android:paddingHorizontal="4dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="4dp"
+                app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btn_save_image"
                 app:layout_constraintTop_toBottomOf="@id/tv_content" />
@@ -173,8 +175,9 @@
                 android:textColor="@color/aspire_dark_text"
                 android:textAllCaps="false"
                 android:textSize="13sp"
-                android:paddingHorizontal="2dp"
+                android:paddingHorizontal="4dp"
                 android:layout_marginStart="4dp"
+                app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btn_continue_transaction"
                 app:layout_constraintTop_toTopOf="@+id/btn_continue_transaction" />
