--- a/app/src/main/res/layout/receipt_payment_activity.xml
+++ b/app/src/main/res/layout/receipt_payment_activity.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:gravity="center"
+                android:paddingBottom="10dp"
                 >
 
                 <TextView
