--- a/app/src/main/res/layout/home_customer_activity.xml
+++ b/app/src/main/res/layout/home_customer_activity.xml
@@ -112,17 +112,12 @@
                     android:id="@+id/deposit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_transfer"
+                    android:src="@mipmap/ic_deposit"
                     />
 
 
             </androidx.cardview.widget.CardView>
 
-<!--            <View-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:layout_weight="1"-->
-<!--                />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -139,11 +134,6 @@
                     />
             </androidx.cardview.widget.CardView>
 
-<!--            <View-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:layout_weight="1"-->
-<!--                />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -184,11 +174,6 @@
 
             </androidx.cardview.widget.CardView>
 
-<!--            <View-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:layout_weight="1"-->
-<!--                />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -205,11 +190,6 @@
                     />
             </androidx.cardview.widget.CardView>
 
-<!--            <View-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:layout_weight="1"-->
-<!--                />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
