fix add customer

--- a/app/src/main/res/layout/list_customer_detail.xml
+++ b/app/src/main/res/layout/list_customer_detail.xml
@@ -238,6 +238,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
                         android:enabled="false"
+                        android:inputType="number"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
