--- a/app/src/main/res/layout/book_room_activity.xml
+++ b/app/src/main/res/layout/book_room_activity.xml
@@ -107,8 +107,8 @@
                         android:textSize="20dp"
                         android:drawableStart="@drawable/outline_calendar_month_24"
                         android:drawablePadding="10dp"
-                        android:text="2026-02-15"
                         />
+<!--                        android:text="2026-02-15"-->
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -131,8 +131,8 @@
                         android:textSize="20dp"
                         android:drawableStart="@drawable/outline_calendar_month_24"
                         android:drawablePadding="10dp"
-                        android:text="2026-02-16"
                         />
+<!--                        android:text="2026-02-16"-->
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -155,9 +155,9 @@
                         android:textSize="20dp"
                         android:drawableStart="@drawable/outline_location_on_24"
                         android:drawablePadding="10dp"
-                        android:text="1"
                         android:inputType="number"
                         />
+<!--                        android:text="1"-->
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -180,9 +180,9 @@
                         android:textSize="20dp"
                         android:drawableStart="@drawable/outline_location_on_24"
                         android:drawablePadding="10dp"
-                        android:text="1"
                         android:inputType="number"
                         />
+<!--                        android:text="1"-->
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -205,9 +205,9 @@
                         android:textSize="20dp"
                         android:drawableStart="@drawable/outline_location_on_24"
                         android:drawablePadding="10dp"
-                        android:text="5"
                         android:inputType="number"
                         />
+<!--                        android:text="5"-->
                 </com.google.android.material.textfield.TextInputLayout>
 
 
