--- a/app/src/main/res/layout/book_ticket_activity.xml
+++ b/app/src/main/res/layout/book_ticket_activity.xml
@@ -87,8 +87,8 @@
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
                             android:textSize="20dp"
-                            android:text="SGN"
                             />
+<!--                            android:text="SGN"-->
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -117,8 +117,8 @@
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
                             android:textSize="20dp"
-                            android:text="HAN"
                             />
+<!--                            android:text="HAN"-->
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -147,8 +147,8 @@
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
                             android:textSize="20dp"
-                            android:text="2026-02-03"
                             />
+<!--                            android:text="2026-02-03"-->
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -177,9 +177,9 @@
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
                             android:textSize="20dp"
-                            android:text="1"
                             android:inputType="number"
                             />
+<!--                            android:text="1"-->
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -208,9 +208,9 @@
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
                             android:textSize="20dp"
-                            android:text="1"
                             android:inputType="number"
                             />
+<!--                            android:text="1"-->
                     </com.google.android.material.textfield.TextInputLayout>
 
 
